# docs/swagger.yaml
@@ -38,9 +38,7 @@ info:
 paths:
   /api/categories:
     get:
-      consumes:
-      - application/json
-      description: Handle /api/categories (GET)
+      description: Get a list of all categories
       produces:
       - application/json
       responses:
@@ -50,21 +48,45 @@ paths:
             items:
               $ref: '#/definitions/main.Category'
             type: array
-      summary: List categories
+      summary: List all categories
+      tags:
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: Add a new category to the catalog
+      parameters:
+      - description: Category object
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/main.Category'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.Category'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new category
       tags:
       - categories
   /api/products:
     get:
-      consumes:
-      - application/json
-      description: Handle /api/products (GET and POST)
-      parameters:
-      - description: Product object
-        in: body
-        name: product
-        required: true
-        schema:
-          $ref: '#/definitions/main.Product'
+      description: Get a list of all products
       produces:
       - application/json
       responses:
@@ -74,24 +96,103 @@ paths:
             items:
               $ref: '#/definitions/main.Product'
             type: array
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/main.Product'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Create or List products
+      summary: List all products
       tags:
       - products
     post:
       consumes:
       - application/json
-      description: Handle /api/products (GET and POST)
+      description: Add a new product to the catalog
       parameters:
+      - description: Product object
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/main.Product'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.Product'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new product
+      tags:
+      - products
+  /api/products/{id}:
+    delete:
+      description: Remove a product from the catalog
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete a product
+      tags:
+      - products
+    get:
+      description: Get details of a product by ID
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Product'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get a product detail
+      tags:
+      - products
+    put:
+      consumes:
+      - application/json
+      description: Update an existing product's details
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
       - description: Product object
         in: body
         name: product
@@ -104,12 +205,6 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/main.Product'
-            type: array
-        "201":
-          description: Created
-          schema:
             $ref: '#/definitions/main.Product'
         "400":
           description: Bad Request
@@ -117,125 +212,13 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Create or List products
-      tags:
-      - products
-  /api/products/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Handle /api/products/{id} (GET, UPDATE AND DELETE)
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Product object (for PUT)
-        in: body
-        name: product
-        schema:
-          $ref: '#/definitions/main.Product'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
         "404":
           description: Not Found
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get, Update or Delete a product
-      tags:
-      - products
-    get:
-      consumes:
-      - application/json
-      description: Handle /api/products/{id} (GET, UPDATE AND DELETE)
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Product object (for PUT)
-        in: body
-        name: product
-        schema:
-          $ref: '#/definitions/main.Product'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get, Update or Delete a product
-      tags:
-      - products
-    put:
-      consumes:
-      - application/json
-      description: Handle /api/products/{id} (GET, UPDATE AND DELETE)
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Product object (for PUT)
-        in: body
-        name: product
-        schema:
-          $ref: '#/definitions/main.Product'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get, Update or Delete a product
+      summary: Update a product
       tags:
       - products
   /health:
